--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
         const JOGOS_POR_CARTELA = 8;
 
         // Função para gerar ou recuperar números fixos (para não mudarem no F5)
-        function obterJogos() {
+        function obterJogoss() {
             let dadosSalvos = localStorage.getItem('mega_sena_jogos');
             if (dadosSalvos) return JSON.parse(dadosSalvos);
 
