--- a/MegaSena-geral.html
+++ b/MegaSena-geral.html
@@ -163,6 +163,7 @@
                                 <span class="ball">12</span><span class="ball">21</span><span class="ball">29</span><span class="ball">36</span><span class="ball">43</span><span class="ball">57</span>
                             </div>
                         </div>
+                        </div><div class="bg-white p-4 rounded-xl shadow border-t-4 border-green-600"><h2 class="font-bold text-green-700 mb-3 uppercase text-sm tracking-widest">Bolão Geral</h2>
 
                         <div class="flex items-center gap-2 mb-2">
                              <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">17 Isabela</p>
@@ -206,11 +207,76 @@
                             </div>
                         </div>
 
-                          <div class="flex items-center gap-2 mb-2">
-                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">????</p>
+                         <div class="flex items-center gap-2 mb-2">
+                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">23 Edna</p>
                             <div class="flex gap-1 bg-gray-50 p-1.5 rounded-lg flex-grow justify-center border border-gray-100">
-                                <span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span>
+                                <span class="ball">01</span><span class="ball">05</span><span class="ball">10</span><span class="ball">21</span><span class="ball">45</span><span class="ball">60</span>
                             </div>
+                        </div>
+
+                         <div class="flex items-center gap-2 mb-2">
+                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">24 Edna</p>
+                            <div class="flex gap-1 bg-gray-50 p-1.5 rounded-lg flex-grow justify-center border border-gray-100">
+                                <span class="ball">07</span><span class="ball">09</span><span class="ball">18</span><span class="ball">33</span><span class="ball">38</span><span class="ball">50</span>
+                            </div>
+                        </div>
+
+                         <div class="flex items-center gap-2 mb-2">
+                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">25 Lavinia</p>
+                            <div class="flex gap-1 bg-gray-50 p-1.5 rounded-lg flex-grow justify-center border border-gray-100">
+                                <span class="ball">07</span><span class="ball">11</span><span class="ball">22</span><span class="ball">39</span><span class="ball">46</span><span class="ball">54</span>
+                            </div>
+                        </div>
+
+                            <div class="flex items-center gap-2 mb-2">
+                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">26 Lavinia</p>
+                            <div class="flex gap-1 bg-gray-50 p-1.5 rounded-lg flex-grow justify-center border border-gray-100">
+                                <span class="ball">09</span><span class="ball">14</span><span class="ball">17</span><span class="ball">20</span><span class="ball">33</span><span class="ball">44</span>
+                            </div>
+                        </div>
+
+                        <div class="flex items-center gap-2 mb-2">
+                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">27 Heitor </p>
+                            <div class="flex gap-1 bg-gray-50 p-1.5 rounded-lg flex-grow justify-center border border-gray-100">
+                                <span class="ball">08</span><span class="ball">11</span><span class="ball">20</span><span class="ball">23</span><span class="ball">30</span><span class="ball">55</span>
+                            </div>
+                        </div>
+
+                        <div class="flex items-center gap-2 mb-2">
+                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">28 Heitor</p>
+                            <div class="flex gap-1 bg-gray-50 p-1.5 rounded-lg flex-grow justify-center border border-gray-100">
+                                <span class="ball">01</span><span class="ball">07</span><span class="ball">10</span><span class="ball">17</span><span class="ball">33</span><span class="ball">42</span>
+                            </div>
+                        </div>
+
+                        <div class="flex items-center gap-2 mb-2">
+                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">29 Arthur</p>
+                            <div class="flex gap-1 bg-gray-50 p-1.5 rounded-lg flex-grow justify-center border border-gray-100">
+                                <span class="ball">03</span><span class="ball">04</span><span class="ball">06</span><span class="ball">09</span><span class="ball">18</span><span class="ball">52</span>
+                            </div>
+                        </div>
+
+                        <div class="flex items-center gap-2 mb-2">
+                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">30 Arthur</p>
+                            <div class="flex gap-1 bg-gray-50 p-1.5 rounded-lg flex-grow justify-center border border-gray-100">
+                                <span class="ball">08</span><span class="ball">09</span><span class="ball">13</span><span class="ball">15</span><span class="ball">45</span><span class="ball">57</span>
+                            </div>
+                        </div>
+                        
+                          <div class="flex items-center gap-2 mb-2">
+                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">31 Elaine</p>
+                            <div class="flex gap-1 bg-gray-50 p-1.5 rounded-lg flex-grow justify-center border border-gray-100">
+                                <span class="ball">02</span><span class="ball">08</span><span class="ball">18</span><span class="ball">39</span><span class="ball">47</span><span class="ball">49</span>
+                            </div>
+                        </div>
+
+                        <div class="flex items-center gap-2 mb-2">
+                             <p class="flex gap-1 justify-center flex-grow text-gray-600 mb-4 text-sm">32 Elaine</p>
+                            <div class="flex gap-1 bg-gray-50 p-1.5 rounded-lg flex-grow justify-center border border-gray-100">
+                                <span class="ball">04</span><span class="ball">07</span><span class="ball">36</span><span class="ball">42</span><span class="ball">50</span><span class="ball">57</span>
+                            </div>
+                        </div>
+                                     
                         </div>
 
                     </div>
